--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
     <title>Place to Stay</title>
   </head>
   <body>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
